@@ -1,5 +1,5 @@
 /***************************************************************************
- *   Copyright (C) 2008 by Walter Brisken                                  *
+ *   Copyright (C) 2008-2010 by Walter Brisken                             *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -34,6 +34,8 @@
 
 
 /* FIXME -- add condition structure */
+/* This function determines if two DifxInput structures are
+ * mergable at all. */
 int areDifxInputsMergable(const DifxInput *D1, const DifxInput *D2)
 {
 	if(D1->specAvg != D2->specAvg ||
@@ -56,9 +58,13 @@ int areDifxInputsMergable(const DifxInput *D1, const DifxInput *D2)
 	return 1;
 }
 
+/* This function determines if two DifxInput arenot mergable
+ * because difxio does not currently support it, but could
+ * in the future */
 int areDifxInputsCompatible(const DifxInput *D1, const DifxInput *D2)
 {
 	int f;
+	int a1, a2;
 
 	if(D1->nFreq != D2->nFreq)
 	{
@@ -70,6 +76,20 @@ int areDifxInputsCompatible(const DifxInput *D1, const DifxInput *D2)
 		if(isSameDifxFreq(D1->freq + f, D2->freq + f) == 0)
 		{
 			return 0;
+		}
+	}
+
+	for(a1 = 0; a1 < D1->nAntenna; a1++)
+	{
+		for(a2 = 0; a2 < D2->nAntenna; a2++)
+		{
+			if(isSameDifxAntenna(D1->antenna + a1, D2->antenna + a2))
+			{
+				if(!isSameDifxAntennaClock(D1->antenna + a1, D2->antenna + a2))
+				{
+					return 0;
+				}
+			}
 		}
 	}
 
