@@ -1,5 +1,5 @@
 /***************************************************************************
- *   Copyright (C) 2008 by Walter Brisken                                  *
+ *   Copyright (C) 2008-2010 by Walter Brisken                             *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -74,7 +74,7 @@ int writeDifxIM(const DifxInput *D, const char *filename)
 	writeDifxLine(out, "ABERRATION CORR", 
 		aberCorrStrings[D->job->aberCorr]);
 
-	writeDifxAntennaArray(out, D->nAntenna, D->antenna, 0, 0, 0, 0, 0);
+	writeDifxAntennaArray(out, D->nAntenna, D->antenna, D->mjdStart, 0, 0, 0, 0, 0);
 
 	writeDifxLineInt(out, "NUM SCANS", D->nScan);
 
