@@ -1,5 +1,5 @@
 /***************************************************************************
- *   Copyright (C) 2008 by Walter Brisken                                  *
+ *   Copyright (C) 2008-2010 by Walter Brisken                             *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -91,7 +91,7 @@ static int writeFreqTable(FILE *out, const DifxInput *D)
 static int writeTelescopeTable(FILE *out, const DifxInput *D)
 {
 	fprintf(out, "# TELESCOPE TABLE ##!\n");
-	writeDifxAntennaArray(out, D->nAntenna, D->antenna, 0, 0, 0, 1, 0);
+	writeDifxAntennaArray(out, D->nAntenna, D->antenna, D->mjdStart, 0, 0, 0, 1, 0);
 	fprintf(out, "\n");
 
 	return 0;
