@@ -5,6 +5,9 @@
   needed
 * Support for subset of sub-band processing, including new array freqIdUsed
   and ammendments to freqId2IF: -1 now means that freq is not to be used
+* Clock accountability 1: Prevent merging of two jobs with incompatible clocks
+* Clock accountability 2: Keep separate clockEpoch parameter for each antenna
+
 
 2.12.2
 * Fix some compiler warnings
